@@ -28,16 +28,6 @@
 
 _BEGIN_STD_C
 
-#ifdef __CYGWIN__
-# ifdef __BSD_VISIBLE
-#  define __TM_GMTOFF tm_gmtoff
-#  define __TM_ZONE   tm_zone
-# else
-#  define __TM_GMTOFF __tm_gmtoff
-#  define __TM_ZONE   __tm_zone
-# endif
-#endif
-
 struct tm
 {
   int	tm_sec;
